k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-app-service
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
